--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ nav ul li a {
 }
 
 .logo img {
-  width: 100px;
+  width: 50px;
   height: 50px;
 }
 
@@ -240,7 +240,7 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  background: url("../images/home-bg.jpg") repeat scroll center center / cover;
+  background: url("../images/background_desktop.png") repeat scroll center center / cover;
   height: 100vh;
   width: 100%;
 }
@@ -320,6 +320,23 @@ nav ul li a {
   text-align: left;
 }
 
+.btn.btn-download {
+  background-color: #b8a07e;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+}
+
+.btn-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+
+
+
 /*-----------------------------------------------------------------------------------*/
 /*   Services
 /*-----------------------------------------------------------------------------------*/
@@ -388,6 +405,39 @@ nav ul li a {
 
 
 /*-----------------------------------------------------------------------------------*/
+/*  Experience
+/*-----------------------------------------------------------------------------------*/
+
+.experience-item {
+  background-color: #f9f9f9;
+  padding: 20px;
+  margin-bottom: 30px;
+}
+
+.experience-item h3 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.experience-item h4 {
+  font-size: 18px;
+  color: #666;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.experience-item p {
+  font-size: 16px;
+  color: #888;
+  line-height: 1.5;
+  text-align: left;
+}
+
+
+
+/*-----------------------------------------------------------------------------------*/
 /*  Portfolio
 /*-----------------------------------------------------------------------------------*/
 
@@ -442,10 +492,35 @@ nav ul li a {
   margin-bottom: 30px;
   overflow: hidden;
   min-height: 260px;
+  position: relative;
 }
 
 .portfolio-thumbnail img {
   max-width: 100%;
+}
+
+.portfolio-thumbnail {
+  position: relative;
+}
+
+.hover-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio-thumbnail:hover .hover-info {
+  opacity: 1;
 }
 
 /*-----------------------------------------------------------------------------------*/
